<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/centerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/helloMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloMessage"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">
        </TextView>

        <TextView
            android:id="@+id/wishMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishMessage"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helloMessage">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centerInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/logIn"
        android:textSize="20sp"
        android:height="70dp"
        android:width="350sp">
    </Button>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>