<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintHeight="50dp"
        app:layout_constraintWidth="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signInText">
    </ImageView>

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signInText"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="30sp">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,NotSibling"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/signInText"
        android:layout_marginTop="100dp">


        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/emailText"
            android:backgroundTint="@color/gray"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            app:layout_constraintWidth="350dp">
        </EditText>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            android:hint="@string/passwordText"
            android:backgroundTint="@color/gray"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:password="true"
            android:layout_marginTop="15dp"
            app:layout_constraintWidth="350dp"
            tools:ignore="Deprecated">
        </EditText>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputData">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/signInText"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:height="70dp"
            android:width="350sp">
        </Button>

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerText"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton"
            android:textSize="20sp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp">
        </TextView>

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerText"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/profileText"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:height="70dp"
            android:width="350sp">
        </Button>

        <ImageView
            android:layout_width="464dp"
            android:layout_height="364dp"
            android:src="@drawable/leaves"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/registerText">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>